# worek

./: .copier-answers-py.yaml  .coveragerc  .git-blame-ignore-revs  .pre-commit-config.yaml  Pipfile  changelog.rst  compose.yaml  hatch.toml  license.txt  mise.toml  pyproject.toml  readme.md  readme.rst  ruff.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: nox.yaml
src/worek/: cli.py  core.py  utils.py
src/worek/dialects/: postgres.py
tasks/: bump
tests/worek_tests/: conftest.py  helpers.py  test_cli.py  test_core.py  test_postgres.py
worek/: __init__.py  cli.py  core.py
worek/dialects/: postgres.py
worek/tests/: conftest.py  helpers.py  test_core.py  test_postgres.py
