[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'Worek'
authors = [
    {name = 'Level 12', email = 'devteam@level12.io'},
]
requires-python = '~=3.13.0'
dynamic = ['version']
readme = 'readme.md'


[project.scripts]
'worek' = 'worek.cli:main'


[dependency-groups]
dev = [
    {include-group = "pytest"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',
]
# Used by nox
pytest = [
    'pytest',
    'pytest-cov',
]
# Used by nox
pre-commit = [
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
