[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'worek'
description = 'Database Backup Command Line Utility'
authors = [
    {name = 'Level 12', email = 'devteam@level12.io'},
]
license = {text = 'BSD'}
requires-python = '~=3.13.0'
dynamic = ['version']
readme = 'readme.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
]
dependencies = [
    'sqlalchemy',
    'click',
    'psycopg2-binary',
]

[project.urls]
Homepage = 'https://github.com/level12/worek'

[project.scripts]
'worek' = 'worek.cli:cli'


[dependency-groups]
dev = [
    {include-group = "pytest"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',
]
# Used by nox
pytest = [
    'pytest',
    'pytest-cov',
]
# Used by nox
pre-commit = [
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
